tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/005-middle-decl-assign.xxx
x := (a := 1, b := , c := 3) => () { }

// @TODO This should yield the same error.
// x := (a:=1,b:=,c:=3) => () { }
